--- a/vk/index.html
+++ b/vk/index.html
@@ -4,10 +4,10 @@
   <title>Test</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link href="/main.css" rel="stylesheet">-->
+  <link href="./main.css" rel="stylesheet">
 </head>
 <body>
-  <div id="root"></div>
-  <script src="./bundle.js"></script>
+<div id="root"></div>
+<script src="./bundle.js"></script>
 </body>
 </html>
