--- a/vk/index.html
+++ b/vk/index.html
@@ -7,7 +7,8 @@
   <!--<link href="./main.css" rel="stylesheet">-->
 </head>
 <body>
+<h1>hi</h1>
 <div id="root"></div>
-<script src="./bundle.js"></script>
+<!--<script src="./bundle.js"></script>-->
 </body>
 </html>
