--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Чат по группам</title>
-		<meta name="keywords" content="чат, группы, чат по группам, чат по интересам">
-		<meta name="description" content="Чат по группам, здесь можно найти много собеседников по своим интересам.">
-		<link href="styles/main.css" rel="stylesheet">
-	</head>
-	
-	<body>
-		<div class="namegroup"></div>
-		<div class="layer-chat">
-			<textarea class="messagebox"></textarea>
-			<textarea class="input-text" ></textarea>
-			<button class="button-send">Отправить</button>
-		</div>
-	</body>
-	
-	<script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
-	<script src="scripts/main.js"></script>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Test</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<link href="./main.css" rel="stylesheet">-->
+</head>
+<body>
+<h1>hi</h1>
+<div id="root"></div>
+<!--<script src="./bundle.js"></script>-->
+</body>
 </html>
