--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <title>Test</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link href="./main.css" rel="stylesheet">-->
 </head>
 <body>
 <div id="root"></div>
+<script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
+<script language="javascript">
+  VK.init(function() {
+    console.log('API initialization succeeded');
+  }, function() {
+    console.error('API initialization failed');
+  }, '5.67');
+</script>
 <script src="./bundle.js"></script>
 </body>
 </html>
