--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div id="root"></div>
 <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
 <script language="javascript">
   VK.init(function() {
@@ -15,6 +14,6 @@
     console.error('API initialization failed');
   }, '5.67');
 </script>
-<script src="./bundle.js"></script>
+<script src="/scripts/main.js"></script>
 </body>
 </html>
