--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
 
   .modal {
     height: 100vh;
+    width: 100vw;
     position: fixed;
     background-color: #989898;
     z-index: 100;
+  }
+
+  html,
+  body {
+    margin: 0;
+    padding: 0;
   }
 </style>
 </html>
