--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     height: 100vh;
     width: 100vw;
     position: fixed;
-    background-color: #989898;
+    background-color: rgba(0, 0, 0, 0.25);
     z-index: 100;
   }
 
