--- a/test.html
+++ b/test.html
@@ -22,19 +22,13 @@
 
   button {
     padding: 20px 50px;
+    position: fixed;
+    bottom: 10px;
   }
 </style>
 <body>
 <div class="wrap">
   <div class="inner-scroll">
-    <button>top</button>
-    display: flex;
-    <br>
-    flex-direction: column;
-    <br>
-    justify-content: space-between;
-    <br>
-    align-items: center;
     <button>bottom</button>
   </div>
 </div>
