--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang='en' class=''>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style class="cp-pen-styles">
   body,
   html {
@@ -21,9 +22,12 @@
   }
 
   button {
-    padding: 20px 50px;
+    width: 100%;
+    background-color: #5bc0de;
     position: fixed;
-    bottom: 10px;
+    bottom: 0;
+    border: none;
+    height: 50px;
   }
 </style>
 <body>
