--- a/test2.html
+++ b/test2.html
@@ -11,7 +11,7 @@
     background-color: grey;
   }
 
-  .inner-scroll {
+  .inner {
     background-color: white;
     height: 100vh;
     overflow-y: auto;
@@ -24,15 +24,14 @@
   button {
     width: 100%;
     background-color: #5bc0de;
-    position: fixed;
     bottom: 0;
     border: none;
     height: 50px;
   }
 </style>
 <body><div class="wrap">
-  <div class="inner-scroll">
+  <div class="inner">
+    <button>bottom</button>
   </div>
-  <button>bottom</button>
 </div>
 </body></html>
