--- a/test2.html
+++ b/test2.html
@@ -16,8 +16,8 @@
     height: 100vh;
     overflow-y: auto;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
     flex-direction: column;
   }
 
