--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_e9a658185e.js"></script></body>
+<script src="/bundle_fdf88dd26f.js"></script></body>
 
 </html>
