--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_830797767e.js"></script></body>
+<script src="/bundle_bb99e0b95b.js"></script></body>
 
 </html>
