--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <title>NEEO</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+  <script src="https://connect.trezor.io/4/connect.js"></script>
 </head>
 
 <body>
 <div id="root"></div>
-<script src="/bundle_bb99e0b95b.js"></script></body>
+<script src="/bundle_b8b995c3bb.js"></script></body>
 
 </html>
