--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_d8c88909a8.js"></script></body>
+<script src="/bundle_7a162c2215.js"></script></body>
 
 </html>
