--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_d50edb4fac.js"></script></body>
+<script src="/bundle_0371a70657.js"></script></body>
 
 </html>
