--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_ff7bab1649.js"></script></body>
+<script src="/bundle_ec2afdacfb.js"></script></body>
 
 </html>
