--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_ec2afdacfb.js"></script></body>
+<script src="/bundle_40d1af2a8a.js"></script></body>
 
 </html>
