--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_c6dea9e675.js"></script></body>
+<script src="/bundle_d3fe3af839.js"></script></body>
 
 </html>
