--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_a0207b0a78.js"></script></body>
+<script src="/bundle_ef401f9029.js"></script></body>
 
 </html>
