--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_ce874e16b7.js"></script></body>
+<script src="/bundle_2313659bd9.js"></script></body>
 
 </html>
