--- a/trezor-connect-v4-nonce-03/index.html
+++ b/trezor-connect-v4-nonce-03/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="./bundle_5dd9b0db12.js"></script></body>
+<script src="./bundle_a21f2b8f83.js"></script></body>
 
 </html>
