--- a/trezor-connect-v4-fix-hex-value/index.html
+++ b/trezor-connect-v4-fix-hex-value/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="./bundle_5ca7e06339.js"></script></body>
+<script src="./bundle_85faad6e3d.js"></script></body>
 
 </html>
