--- a/trezor-connect-v4/index.html
+++ b/trezor-connect-v4/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="./bundle_7eaace1be6.js"></script></body>
+<script src="/bundle_bb40649f4b.js"></script></body>
 
 </html>
