--- a/trezor-connect-v4-withHttpProveider/index.html
+++ b/trezor-connect-v4-withHttpProveider/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_bbfa64389d.js"></script></body>
+<script src="./bundle_bbfa64389d.js"></script></body>
 
 </html>
