--- a/trezor-connect-v4/index.html
+++ b/trezor-connect-v4/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="./bundle_9829693268.js"></script></body>
+<script src="/bundle_f440487888.js"></script></body>
 
 </html>
