--- a/trezor-connect-test-transaction/index.html
+++ b/trezor-connect-test-transaction/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>NEEO</title>
+  <title>Trezor Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
