--- a/trezor-connect-test-transaction/index.html
+++ b/trezor-connect-test-transaction/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-<button onclick="sendTransaction(0.05)">Send 0.05 eth</button>
+<button onclick="sendTransaction(0.005)">Send 0.005 eth</button>
 <div id="root"></div>
 <script>
-  console.log('v 8');
+  console.log('v 9');
   window.EthereumTx = ethereumjs.Tx;
 
   const addHexPrefix = (value) => `0x${value}`;
@@ -54,7 +54,7 @@
     console.log('trezorAdress:', trezorAdress);
     console.log('transaction cost:', getTransactionCostInWei(gasPrice, gasLimit));
     const valueInDec = Number.parseFloat(value, 16);
-    console.log('transaction sum:', getTransactionCostInWei(gasPrice, gasLimit) + valueInDec);
+    console.log('transaction sum:', +getTransactionCostInWei(gasPrice, gasLimit) + valueInDec);
     const fromWalletBalance = await asyncRequest(web3.eth.getBalance, trezorAdress.address);
     console.log('from/sender have eth:', web3.fromWei(fromWalletBalance.toString(10), 'ether'));
     const toWalletBalance = await asyncRequest(web3.eth.getBalance, to);
