--- a/trezor-connect-test-transaction/index.html
+++ b/trezor-connect-test-transaction/index.html
@@ -37,7 +37,7 @@
 
   sendTransaction = async (value) => {
     window.web3 = new Web3(new Web3.providers
-      .HttpProvider('https://kovan.infura.io/v3/adde26ec7b994797923aae6cdea28a63'));
+      .HttpProvider('https://ropsten.infura.io/v3/adde26ec7b994797923aae6cdea28a63'));
     const addressN = "m/44'/1'/0'/0/0";
     const gasPrice = new BigNumber(web3.toWei('20', 'gwei'));
     const gasLimit = new BigNumber(21000);
