--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_87ec7335e6.js"></script></body>
+<script src="/bundle_b5e5de2188.js"></script></body>
 
 </html>
