--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_bc39b95db0.js"></script></body>
+<script src="/bundle_788d542f58.js"></script></body>
 
 </html>
