--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>NEEO</title>
+  <title>NEEO v1</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
@@ -11,6 +11,6 @@
 
 <body>
 <div id="root"></div>
-<script src="/bundle_788d542f58.js"></script></body>
+<script src="/bundle_30ee156c77.js"></script></body>
 
 </html>
