--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>NEEO v2</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
-  <script src="https://connect.trezor.io/4/connect.js"></script>
 </head>
 
 <body>
 <div id="root"></div>
-<script src="/bundle_7497f54f14.js"></script></body>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+<script src="https://connect.trezor.io/4/connect.js"></script>
+<script src="/bundle_95e3bb2a5b.js"></script></body>
 
 </html>
