--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <div id="root"></div>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 <script src="https://connect.trezor.io/4/connect.js"></script>
-<script src="/bundle_95e3bb2a5b.js"></script></body>
+<script src="/bundle_90b8ddb7a4.js"></script></body>
 
 </html>
