--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>NEEO v3</title>
+  <title>NEEO release1</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,6 +11,6 @@
 <div id="root"></div>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 <script src="https://connect.trezor.io/4/connect.js"></script>
-<script src="/bundle_90b8ddb7a4.js"></script></body>
+<script src="/bundle_7a76885b44.js"></script></body>
 
 </html>
