--- a/tz-search-form/index.html
+++ b/tz-search-form/index.html
@@ -6,10 +6,10 @@
   <meta name="description" content="Проверка моих знаний в react js">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/styleCSS_c80423394b.css" rel="stylesheet"></head>
+<link href="./styleCSS_c80423394b.css" rel="stylesheet"></head>
 
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle_c80423394b.js"></script></body>
+<script type="text/javascript" src="./bundle_c80423394b.js"></script></body>
 
 </html>
